done! Works as needed, only issue is I couldn't get the overflow to scroll on the resultsDiv, not sure why

--- a/styles.css
+++ b/styles.css
@@ -60,12 +60,13 @@ h1  {
 	height: 430px;
 	width: 230px;
 	display: flex;
-	flex-direction: column-reverse;
-	justify-content: flex-start;
+	flex-direction: column;
+	justify-content: flex-end;
 	margin: 0 auto;
 	background-color: var(--dark-gray);
 	border-top-left-radius: 20px;
 	border-top-right-radius: 20px;
+	overflow-y: auto;
 }
 
 /*input styling */
@@ -108,4 +109,10 @@ button {
 	background-color: var(--dark-gray);
 	color:white;
 	font-weight: bold;
+}
+
+/* results styling */ 
+
+.results {
+	text-align: center;
 }
